[project]
authors = [
  # In alphabetical order
  { name = "Paul Müller", email = "dev@craban.de" },
  { name = "Thomas Bischof" },
]
description = "Scientific tool for fitting correlation curves on a logarithmic plot."
name = "pycorrfit"
readme = "README.rst"
license = "GPL-2.0-only"
requires-python = ">=3.11, <4"
dynamic = ["version"]

dependencies = [
  "lmfit >= 0.9.2",
  "numpy >= 1.14.2",
  "pyyaml >= 3.12",
  "scipy >= 1.0.1",
  "ptufile >= 2025.12.12",
  "looseversion >= 1.3.0",
]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
  "Intended Audience :: Science/Research",
]
keywords = ["fluorescence correlation spectroscopy (FCS)"]

[project.urls]
repository = "https://github.com/FCS-analysis/PyCorrFit"

[project.optional-dependencies]
test = ["pytest", "urllib3", "ruff", "ty", "codespell"]
# Graphical User Interface (pip install pycorrfit[GUI])
GUI = [
  "matplotlib >= 2.2.2",
  "sympy >= 1.1.1",
  "simplejson",          # for updates
  "wxPython >= 4.0.1",
]

[project.gui-scripts]
pycorrfit = "pycorrfit.gui.main:Main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=9"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
version_file = "pycorrfit/_version.py"

[tool.setuptools_scm.scm.git]
# ensures that we find the x.y.z (no v prefix) tags
describe_command = "git describe --dirty --tags --long --match '[0-9]*'"

[tool.setuptools.package-data]
pycorrfit_doc = ["CHANGELOG", "doc/PyCorrFit_doc.pdf"]

[tool.ruff]
exclude = ["docs", "pycorrfit", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ty.src]
exclude = ["docs", "pycorrfit", "tests", "setup.py"]

[tool.codespell]
skip = "./CHANGELOG,./build*,./*egg-info,./doc*,./examples,./pycorrfit,./setup.py,./tests"
